activityIndicator added and scrollview for small screens

--- a/WeatherAssignmentApp/Views/Base.lproj/Main.storyboard
+++ b/WeatherAssignmentApp/Views/Base.lproj/Main.storyboard
@@ -16,43 +16,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0u-qk-Vxw">
-                                <rect key="frame" x="20" y="47" width="91" height="27.666666666666671"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jKX-gR-iM1">
-                                <rect key="frame" x="20" y="104.66666666666669" width="350" height="218"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wRN-eG-XR2">
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hID-Ju-ZO9" customClass="WeatherReusableView" customModule="WeatherAssignmentApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="350" height="66"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PAX-jw-i7t" customClass="WeatherReusableView" customModule="WeatherAssignmentApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="75.999999999999986" width="350" height="66.000000000000014"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vdA-aY-5XX" customClass="WeatherReusableView" customModule="WeatherAssignmentApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="152" width="350" height="66"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0u-qk-Vxw">
+                                        <rect key="frame" x="20" y="30" width="91" height="27.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jKX-gR-iM1">
+                                        <rect key="frame" x="20" y="87.666666666666657" width="350" height="217.99999999999997"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hID-Ju-ZO9" customClass="WeatherReusableView" customModule="WeatherAssignmentApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="350" height="66"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="66" id="Fae-jX-PXH"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PAX-jw-i7t" customClass="WeatherReusableView" customModule="WeatherAssignmentApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="76" width="350" height="66"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="66" id="RTz-UY-0QL"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vdA-aY-5XX" customClass="WeatherReusableView" customModule="WeatherAssignmentApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="152.00000000000003" width="350" height="66"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="66" id="tiG-i4-LDf"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="alq-uT-8vm">
+                                        <rect key="frame" x="176.66666666666666" y="363" width="37" height="37"/>
+                                    </activityIndicatorView>
                                 </subviews>
-                            </stackView>
+                                <constraints>
+                                    <constraint firstItem="jKX-gR-iM1" firstAttribute="bottom" secondItem="wRN-eG-XR2" secondAttribute="bottom" constant="20" id="5uT-kG-C8e"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="t0u-qk-Vxw" secondAttribute="trailing" constant="20" id="KZK-80-xM0"/>
+                                    <constraint firstItem="jKX-gR-iM1" firstAttribute="trailing" secondItem="wRN-eG-XR2" secondAttribute="trailing" constant="20" id="SXi-Ng-Tz6"/>
+                                    <constraint firstItem="alq-uT-8vm" firstAttribute="centerX" secondItem="wRN-eG-XR2" secondAttribute="centerX" id="ULv-8Q-zux"/>
+                                    <constraint firstItem="jKX-gR-iM1" firstAttribute="width" secondItem="wRN-eG-XR2" secondAttribute="width" multiplier="0.897436" id="awe-gn-HTa"/>
+                                    <constraint firstItem="alq-uT-8vm" firstAttribute="centerY" secondItem="wRN-eG-XR2" secondAttribute="centerY" id="eKp-xc-yZx"/>
+                                    <constraint firstItem="jKX-gR-iM1" firstAttribute="top" secondItem="t0u-qk-Vxw" secondAttribute="bottom" constant="30" id="gBb-6n-7ek"/>
+                                    <constraint firstItem="t0u-qk-Vxw" firstAttribute="leading" secondItem="wRN-eG-XR2" secondAttribute="leading" constant="20" id="xiN-8g-tDE"/>
+                                    <constraint firstItem="jKX-gR-iM1" firstAttribute="leading" secondItem="wRN-eG-XR2" secondAttribute="leading" constant="20" id="yKW-bL-Pfj"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="cw8-BA-Ar3"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Uvd-bu-fSv"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.98039215686274506" green="0.97254901960784312" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="jKX-gR-iM1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6PA-4B-QBG"/>
-                            <constraint firstItem="t0u-qk-Vxw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Fsq-ki-uk1"/>
-                            <constraint firstItem="jKX-gR-iM1" firstAttribute="top" secondItem="t0u-qk-Vxw" secondAttribute="bottom" constant="30" id="HvU-P9-qsM"/>
-                            <constraint firstItem="t0u-qk-Vxw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YG2-HS-drQ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="t0u-qk-Vxw" secondAttribute="trailing" constant="20" id="aCM-lJ-ixb"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jKX-gR-iM1" secondAttribute="trailing" constant="20" id="pFA-qi-XH1"/>
+                            <constraint firstItem="t0u-qk-Vxw" firstAttribute="top" secondItem="wRN-eG-XR2" secondAttribute="top" constant="30" id="5Sb-hd-Isw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wRN-eG-XR2" secondAttribute="bottom" id="Dv4-Fc-BdL"/>
+                            <constraint firstItem="wRN-eG-XR2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cw2-iE-1gO"/>
+                            <constraint firstItem="wRN-eG-XR2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fSK-5g-5Qg"/>
+                            <constraint firstItem="wRN-eG-XR2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ktQ-Ja-zHc"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="alq-uT-8vm" id="nDQ-rA-9lU"/>
                         <outlet property="lastUpdateView" destination="vdA-aY-5XX" id="Aqi-0n-chu"/>
+                        <outlet property="stackContainer" destination="jKX-gR-iM1" id="0Uc-mX-cuC"/>
                         <outlet property="temperatureView" destination="hID-Ju-ZO9" id="GXn-uu-ids"/>
                         <outlet property="windView" destination="PAX-jw-i7t" id="FAz-g9-x7m"/>
                     </connections>
