--- a/WeatherAssignmentApp/Views/Base.lproj/Main.storyboard
+++ b/WeatherAssignmentApp/Views/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -71,7 +72,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.98039215686274506" green="0.97254901960784312" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="vcBackground"/>
                         <constraints>
                             <constraint firstItem="t0u-qk-Vxw" firstAttribute="top" secondItem="wRN-eG-XR2" secondAttribute="top" constant="30" id="5Sb-hd-Isw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wRN-eG-XR2" secondAttribute="bottom" id="Dv4-Fc-BdL"/>
@@ -94,6 +95,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="vcBackground">
+            <color red="0.98039215686274506" green="0.97254901960784312" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
